--- a/elk/logstash/pipeline/laravel-pipeline.conf
+++ b/elk/logstash/pipeline/laravel-pipeline.conf
@@ -1,6 +1,13 @@
 input {
-  beats {
-    port => 5000
+  # beats {
+  #   type => tcp
+  #   ssl => false
+  #   port => 5044
+  # }
+
+  http {
+    port => 8080
+    codec => json
   }
 }
 
@@ -16,6 +23,8 @@ filter {
 output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
+    user => "elastic"
+    password => "hKD62=tjwgq8xWQlRli+"
     index => "laravel-logs-%{+YYYY.MM.dd}"
   }
 }
