--- a/elk/logstash/pipeline/laravel-pipeline.conf
+++ b/elk/logstash/pipeline/laravel-pipeline.conf
@@ -1,9 +1,7 @@
 input {
-  # beats {
-  #   type => tcp
-  #   ssl => false
-  #   port => 5044
-  # }
+  beats {
+    port => 5045
+  }
 
   http {
     port => 5044
