update short command

--- a/elk/logstash/pipeline/laravel-pipeline.conf
+++ b/elk/logstash/pipeline/laravel-pipeline.conf
@@ -22,7 +22,7 @@ output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
     user => "elastic"
-    password => "hKD62=tjwgq8xWQlRli+"
+    password => "pugVnI81Fxs-FdrHd6UX"
     index => "laravel-logs-%{+YYYY.MM.dd}"
   }
 }
